# rockchip-mpp-interface

./: CMakeLists.txt
inc/: mpp_frame.h  rk_mpi.h  rk_mpi_cmd.h  rk_mpi_mb_cmd.h  rk_type.h  rk_venc_cmd.h
mpp/: CMakeLists.txt  mpi.cpp  mpp.cpp
mpp/base/: CMakeLists.txt  mpp_buffer.cpp  mpp_dec_cfg.cpp  mpp_enc_cfg.cpp  mpp_enc_ref.cpp  mpp_frame.cpp
mpp/base/inc/: mpp_enc_refs.h  mpp_frame_impl.h
mpp/base/test/: CMakeLists.txt  mpp_enc_cfg_test.c  mpp_trie_test.c
mpp/common/: h265e_syntax_new.h
mpp/inc/: mpp.h  mpp_enc_cfg.h
osal/: CMakeLists.txt  mpp_chan.cpp  mpp_mem.cpp  mpp_soc.cpp
osal/driver/: mpp_vcodec_client.c  mpp_vcodec_clinet.c  vcodec_service.c
osal/driver/inc/: mpp_vcodec_client.h  mpp_vcodec_clinet.h
osal/inc/: mpp_chan.h  mpp_soc.h
osal/test/: CMakeLists.txt
test/: CMakeLists.txt  mpi_enc_multi_test.c  mpi_enc_test.c
utils/: CMakeLists.txt  mpi_enc_utils.c  mpi_enc_utils.h  osd_test.c  osd_test.h
